--- a/manifest.json
+++ b/manifest.json
@@ -14,11 +14,11 @@
       "sizes": "512x512",
       "type": "image/png"
     }],
-  "start_url": "/",
+  "start_url": "/HackerInsideIPTools",
   "display": "fullscreen",
   "lang": "it-IT",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2",
   "orientation" : "any",
-  "scope" : "/"
+  "scope" : "/HackerInsideIPTools"
 }
